# docs/swagger.json
@@ -30,6 +30,24 @@
                         "description": "Название биржы",
                         "name": "cryptoexchange_name",
                         "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Цена снизу",
+                        "name": "price_from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Цена сверху",
+                        "name": "price_to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Ёршик",
+                        "name": "find_brush",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -47,9 +65,6 @@
         "model.Crypto": {
             "type": "object",
             "properties": {
-                "cryptocurrencyCreateTimestamp": {
-                    "type": "string"
-                },
                 "cryptocurrencyId": {
                     "type": "integer"
                 },
@@ -67,16 +82,10 @@
         "model.DataCrypto": {
             "type": "object",
             "properties": {
-                "cryptoexchangeName": {
+                "cryptoExchangeName": {
                     "type": "string"
                 },
                 "data_olhcv": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "data_order_book": {
                     "type": "array",
                     "items": {
                         "type": "integer"
